etc/kubernetes/manifests/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: santander-phpinfo-svc
spec:
  selector:
    app: santander-phpinfo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
